--- a/index.html
+++ b/index.html
@@ -1,20 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/006e248122.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header>
 
+<body>
+    <header class="himgonehimgtwo">
+        <nav>
+            <div>
+                <p class="mary">Ma<span class="r">r</span>y</p>
+            </div>
+            <div>
+                <ul>
+                    <li>Portfolio</li>
+                    <li>Blog</li>
+                    <button>Hire Me</button>
+                </ul>
+            </div>
+        </nav>
+        <!-- header main start -->
+        <section class="headerSection">
+            <div>
+                <h3 class="hi">Hi, I am </h3>
+                <h1 class="sabber">Sabber Hossen</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <div>
+                    <button><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button><i class="fa-solid fa-phone"></i> Contact</button>
+                </div>
+            </div>
+            <div>
+                <img src="./images/aa-removebg-preview.png" alt="">
+            </div>
+        </section>
     </header>
     <main>
+        <!-- about section -->
+        <section class="about">
+            <h1 class="me">About me</h1>
+            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.</p>
+            <div class="info">
+                <div>
+                    <P>Name:</P>
+                    <h4>Sabber Hossen</h4>
+                </div>
+                <div>
+                    <P>Email:</P>
+                    <h4>armffh2@gmail.com</h4>
+                </div>
+                <div>
+                    <P>Date of birth:
+                    </P>
+                    <h4>11 November 1987</h4>
+                </div>
+                <div>
+                    <P>From:
+                    </P>
+                    <h4>Los Angeles, USA</h4>
+                </div>
+            </div>
+        </section>
+        <!-- what i do  -->
+        <section class="whatido">
+            <h1 class="what">What i do </h1>
+            <p>I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience?
+                Check out my online resume and project portfolio.</p>
+        </section>
+        <!-- card section  -->
+        <section class="boxContainer">
+            <div class="box">
+                <img src="./images/icons/js.png" alt="">
+                <h3>Vanilla JavaScript
+                </h3>
+                <p>List skill/technologies
+                    here. You can change the
+                    icon above to any of the
+                    1500+ FontAwesome 5
+                    free icons available.
+                    Aenean commodo ligula
+                    eget dolor</p>
+            </div>
+            <div class="box">
+                <img src="./images/icons/js.png" alt="">
+                <h3>Vanilla JavaScript
+                </h3>
+                <p>List skill/technologies
+                    here. You can change the
+                    icon above to any of the
+                    1500+ FontAwesome 5
+                    free icons available.
+                    Aenean commodo ligula
+                    eget dolor</p>
+            </div><div class="box">
+                <img src="./images/icons/js.png" alt="">
+                <h3>Vanilla JavaScript
+                </h3>
+                <p>List skill/technologies
+                    here. You can change the
+                    icon above to any of the
+                    1500+ FontAwesome 5
+                    free icons available.
+                    Aenean commodo ligula
+                    eget dolor</p>
+            </div><div class="box">
+                <img src="./images/icons/js.png" alt="">
+                <h3>Vanilla JavaScript
+                </h3>
+                <p>List skill/technologies
+                    here. You can change the
+                    icon above to any of the
+                    1500+ FontAwesome 5
+                    free icons available.
+                    Aenean commodo ligula
+                    eget dolor</p>
+            </div>
+        </section>
+        <!-- summary -->
+        <section class="summary">
+            <h1>A summary of My Resume
+            </h1>
+            <div class="summarymain">
+                <div class="boxsummary">
+                    <h2>My Education</h2>
+                    <h3>Master in Computer Engineering
+                    </h3>
+                    <p>Harvard University / 2015 2017
+                    </p>
+                    <p>List skill/technologies here. You can change the icon above 
 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        commodo ligula eget dolor.
+                        </p>
+                        <hr>
+
+                </div>
+                <div class="boxsummary">
+                    <h2>My Education</h2>
+                    <h3>Master in Computer Engineering
+                    </h3>
+                    <p>Harvard University / 2015 2017
+                    </p>
+                    <p>List skill/technologies here. You can change the icon above 
+
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        commodo ligula eget dolor.
+                        </p>
+                        <hr>
+
+                </div>
+            </div>
+            <div class="summarymain">
+                <div class="boxsummary">
+                    <h2>My Education</h2>
+                    <h3>Master in Computer Engineering
+                    </h3>
+                    <p>Harvard University / 2015 2017
+                    </p>
+                    <p>List skill/technologies here. You can change the icon above 
+
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        commodo ligula eget dolor.
+                        </p>
+                        <hr>
+
+                </div>
+                <div class="boxsummary">
+                    <h2>My Education</h2>
+                    <h3>Master in Computer Engineering
+                    </h3>
+                    <p>Harvard University / 2015 2017
+                    </p>
+                    <p>List skill/technologies here. You can change the icon above 
+
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        commodo ligula eget dolor.
+                        </p>
+                        <hr>
+
+                </div>
+            </div>
+            <div class="summarymain">
+                <div class="boxsummary">
+                    <h2>My Education</h2>
+                    <h3>Master in Computer Engineering
+                    </h3>
+                    <p>Harvard University / 2015 2017
+                    </p>
+                    <p>List skill/technologies here. You can change the icon above 
+
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        commodo ligula eget dolor.
+                        </p>
+                        <hr>
+
+                </div>
+                <div class="boxsummary">
+                    <h2>My Education</h2>
+                    <h3>Master in Computer Engineering
+                    </h3>
+                    <p>Harvard University / 2015 2017
+                    </p>
+                    <p>List skill/technologies here. You can change the icon above 
+
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        commodo ligula eget dolor.
+                        </p>
+                        <hr>
+
+                </div>
+            </div>
+            <div style="text-align: center;">
+                <button >Download CV</button> 
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
